Changed the h2 style for desktop and fixed the overlapping div and image on developers page for What's whodini score

--- a/app/assets/stylesheets/components/carats.css.sass
+++ b/app/assets/stylesheets/components/carats.css.sass
@@ -6,6 +6,7 @@
   background: rgba(darken($brand-green-dk, 30%), .2)
   padding: 0 10px
   +adjust-font-size-to(14px)
+  z-index: 100
 
 .carat-sm
   display: inline-block
